--- a/wp-content/themes/quittasmania/sass/theme/_theme.scss
+++ b/wp-content/themes/quittasmania/sass/theme/_theme.scss
@@ -1096,6 +1096,7 @@ body:not(.home) {
             padding-top: 10px;
         }
         
+        /*
         + h1,
         + h2,
         + h3,
@@ -1105,11 +1106,19 @@ body:not(.home) {
         + div {
             margin-top: 30px;
         }
+        */
     }
 }
 
-#search-wrapper .page-header {
-    margin-top: 30px;
+#search-wrapper {
+    .page-header {
+        margin-top: 30px;
+    }
+    
+    .search-results-wrapper .container {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
 .page-content,
@@ -1517,6 +1526,7 @@ body:not(.home) {
 /*Heading*/
 .content-title {
     overflow: hidden;
+    margin-bottom: 30px;
     
     h1 span {
         display: block;
@@ -1855,19 +1865,32 @@ body:not(.home) {
     .entry-content {
         .section {
             padding-top: 60px;
+            
+            /*
+            + h1:nth-child(1),
+            + h2:nth-child(1),
+            + h3:nth-child(1),
+            + h4:nth-child(1),
+            + h5:nth-child(1),
+            + p:nth-child(1),
+            + div:nth-child(1) {
+                margin-top: 60px;
+            }
+            */
+            
+            /*
+            > h1,
+            > h2,
+            > h3,
+            > h4,
+            > h5,
+            > p,
+            > div {
+                margin-left: -15px;
+                margin-right: -15px;
+            }
+            */
         }
-        
-        /*> h1,
-        > h2,
-        > h3,
-        > h4,
-        > h5,
-        > p,
-        > div {
-            margin-left: -15px;
-            margin-right: -15px;
-        }
-        */
     }
     
     
@@ -2226,6 +2249,8 @@ body:not(.home) {
     
     /*Heading*/
     .content-title {
+        margin-bottom: 60px;
+        
         h1 span.title-small {
             @include font-size(24px);
         }
